# PythonWebScraper

./: .aiexclude  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  1-Install-Dependencies.bat  1-Install-Dependencies.sh  2-Launch-Scraper.bat  2-Launch-Scraper.sh  AGENT_PROMPTS.md  AUDIT_COMPLETION_SUMMARY.md  CODIGO_AUDIT_ERRORES.md  CONVERSATIONAL_AI_GUIDE.md  COPILOT_INSTRUCTIONS.md  GEMINI.md  IA_SELF_REPAIR.md  IA_SYNC.md  INTERFAZ_PROFESIONAL_COMPLETADA.md  MEJORAS.md  PLAN_DE_ACCION.MD  PR_DESCRIPTION.md  README.md  REFACTOR_PLAN.md  REPORTE_FINAL_ESTADO.md  TEST_SPECIFICATION.md  WebScraperPRO.bat  WebScraperPRO.sh  autonomous_cli.py  autonomous_controller.py  brain_simple_verification.py  brain_verification_complete_20250904_225409.json  check_data_quality.py  check_db_tables.py  check_drift.py  count_knowledge.py  database.py  debug-install.bat  demo_conversation.py  demo_professional_interface.py  (+33 more)
.gemini/: config.json  mcp_servers.yaml
.github/: CODEOWNERS  SECURITY.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml  scraper-policy.json
.scraper/: baseline.json
Nueva carpeta/: apply_refactor.ps1
ai/: communication_channel.md  implementation_plan.md  multi_agent_collaboration.md  report_templates.md  routines.md  system-instructions.md  toolsets.md  workflow.md
artifacts/: MOVE_SUGGESTIONS.md  P04_APPROVED.md  demo_result.json  metrics.json
backup_src_20250829092847/: 1-install-dependencies.sh  2-launch-scraper.sh  database.py  frontier_classifier.py  generate_frontier_dataset.py  main.py  scraper.py
backup_src_20250830154605/: fingerprint_manager.py  rl_agent.py
backups/: README.md  RESTORE_GUIDE.md  cleanup_backups.ps1
bots/: basic_bot.py  bot_configs.json
config/: .pre-commit-config.yaml  autonomy_settings.json  brain_overrides.json  gemini_config.json  logging.json  pytest.ini  self_healing.json
data/: autonomous_learning.json  brain.db  brain_enrichment.json  brain_knowledge.db  brain_state.json  curiosity_vectors.db  knowledge_base.json  learning_history.json  ml_intelligence.json  scraper_database.db  scraper_database.db-shm  scraper_database.db-wal
docs/: ARCHITECTURAL_ANALYSIS_REPORT.md  ARCH_MAP.md  AUDIT_COMPLETION_SUMMARY.md  AUDIT_SUPPORT_REPORT.md  CHANGELOG-IA.md  CODE_SMELLS_REPORT.md  CONTRIBUTING.md  CRITICAL_REFACTOR_RECOMMENDATIONS.md  EXPORT_CAPABILITIES.md  GEMINI.md  GUI.md  IA_SELF_REPAIR.md  MEJORAS.md  METRICS_SPEC.md  PLAN_DE_ACCION.MD  POLICY.md  README.md  REFACTOR_PLAN.md  SCHEMA_EVIDENCE.md  SCHEMA_EVOLUTION.md  TEAM_STATUS.md  TEST_RUN.md  chat_commands.md  chat_features.md  chat_overlay.md  correct_ending.txt  guia_consolidada_completa.md  prompt_library.md
exports/: README.md  scrape_results_2025-09-02.csv  scrape_results_2025-09-02.json  test_export.csv  test_export.json  test_export.md  test_final.csv  test_final.json  test_final.md  test_quick.json
logs/: ia_sync_new.md  scraper_run.md  webscraperpro_log.txt
mcp/: servers.json
models/: rl_agent_model.pkl
reports/: autonomous_system_final_report.json  integration_test_report.json
scripts/: Init-DevNuclear.ps1  WebScraperPRO_Enhanced.bat  auto_push_manager.py  autonomous_cli.py  brain_demonstration.py  brain_simple_verification.py  brain_verification.py  check_data_quality.py  check_db_tables.py  check_drift.py  count_knowledge.py  demo_professional_interface.py  ez-push.ps1  final_fix.py  fix_syntax.bat  fix_syntax.py  generate_metrics.py  install_log.txt  manage_backups.py  manage_logs.py  quick-test.ps1  run_auto_push.bat  run_setup_and_tests.py  run_webscraperpro_logged.bat  setup_vscode_insiders.ps1  test_playwright.bat  test_script.bat  test_webscraperpro.bat  verify_brain_complete.py
src/: 1-install-dependencies.sh  2-launch-scraper.sh  _autopolicy.py  ai_assistant_integrator.py  app.py  autonomous_controller.py  autonomous_coordinator.py  config.py  database.py  document_generator.py  exceptions.py  fingerprint_manager.py  frontier_classifier.py  generate_frontier_dataset.py  hot_reload.py  hot_reload_orchestrator.py  intelligent_search.py  interfaces.py  llm_extractor.py  main.py  metrics_persistence.py  orchestrator.py  proxy_manager.py  reloader.py  rl_agent.py  runner.py  scraper.py  self_healing.py  self_improvement.py  settings.py  test_regression.py  thought_engine.py  train_frontier_classifier.py  tui.py  user_agent_manager.py  voice_assistant.py
tests/: __init__.py  conftest.py  fixtures_adapters.py  fixtures_inteligentes.py  test_adapters.py  test_advanced_scraper.py  test_advanced_scraper_core.py  test_auto_modifier.py  test_autonomous_brain.py  test_autonomous_final.py  test_autonomous_integration.py  test_base_scraper.py  test_behavior.py  test_cli.py  test_conversation_ai.py  test_cookie_handling.py  test_core_autonomous.py  test_curiosity.py  test_database.py  test_database_basic.py  test_database_manager.py  test_db.py  test_dup_scan_limit.py  test_example.py  (+43 more)
(+232 files in other folders)
